<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeffffff">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtClose"
        android:text="@string/close"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        />

    <!-- 词句的时长 -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTimeLength"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        />

    <!-- 词句起始时间与终止时间的中间点 -->
    <View android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/middleTime"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtTimeLength"/>

    <!-- 词句起始时间 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTimeStart"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:layout_below="@id/middleTime"
        android:layout_toLeftOf="@id/middleTime"/>

    <!-- 词句终止时间 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTimeEnd"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:layout_below="@id/middleTime"
        android:layout_toRightOf="@id/middleTime"/>


    <!-- 词句起始时间与终止时间的中间点 -->
    <View android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/middleAction"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/middleTime"/>

    <!-- 前移100ms -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtForward100"
        android:textSize="50dp"
        android:text="@string/forwardChar"
        android:textColor="@android:color/darker_gray"
        android:layout_alignTop="@id/middleAction"
        android:layout_toLeftOf="@id/middleAction"
        />


    <!-- 前移500ms -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtForward500"
        android:textSize="50dp"
        android:text="@string/forward2Char"
        android:textColor="@android:color/darker_gray"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@id/middleAction"
        android:layout_toLeftOf="@id/txtForward100"
        />

    <!-- 后移100ms -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBackward100"
        android:textSize="50dp"
        android:text="@string/backwardChar"
        android:textColor="@android:color/darker_gray"
        android:layout_alignTop="@id/middleAction"
        android:layout_toRightOf="@id/middleAction"
        />


    <!-- 前移500ms -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBackward500"
        android:textSize="50dp"
        android:text="@string/backward2Char"
        android:textColor="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_alignTop="@id/middleAction"
        android:layout_toRightOf="@id/txtBackward100"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btnPlay"
        android:src="@drawable/play"
        android:layout_below="@id/middleAction"
        android:layout_centerHorizontal="true"
        />

    <!-- 词句内容 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtContent"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/txtTimeLength"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtForwardSentence"
        android:text="@string/forwardSentence"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBackwardSentence"
        android:text="@string/nextSentence"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtIndex"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>